# opcua_client

./: .gitignore  CMakeLists.txt  Iclient.h  Iclient_opcua.h  Idata_opcua.h  Ijob.h  Ijob_opcua.h  Iopcua_client.h  README.md  cab_client.cpp  cab_client.h  client.cpp  client.h  client.py  client.sln  client.vcxproj  client.vcxproj.filters  client_freeopcua.cpp  client_freeopcua.h  client_open62541.cpp  client_open62541.h  common_defines.h  common_types.h  data_freeopcua.cpp  data_freeopcua.h  data_open62541.cpp  data_open62541.h  data_types.h  defines.h  hello.py  job.h  job_dec_datatype.cpp  job_dec_datatype.h  job_dec_jobtype.cpp  job_dec_jobtype.h  job_dec_nodetype.cpp  job_dec_nodetype.h  job_freeopcua.cpp  job_freeopcua.h  job_open62541.cpp  (+25 more)
files/: old_job_dec.cpp  old_job_dec.h  old_job_dec_data.cpp  old_job_dec_data.h  old_job_dec_node.cpp  old_job_dec_node.h  old_job_dec_type.cpp  old_job_dec_type.h  old_job_open62541.cpp  old_job_open62541.h
res/: basic_label.txt  jobs.txt  label.txt  replace.txt  usage.txt
